# malog

./: CMakeLists.txt  README.md  build_linux.sh  build_mingw.sh  xmake.lua
examples/: CMakeLists.txt  bench.cpp  xmake.lua
src/: malog-impl.h  malog.cpp  malog.h  xmake.lua
tools/: format_code.sh
